@@ -1,3 +1,6 @@
+2011-02-12 Franz Holzinger  <franz@ttproducts.de>
+	* replace for PHP 5.3 deprecated ereg_replace by preg_replace
+
 2011-01-19 Franz Holzinger  <franz@ttproducts.de>
 	* fix bug with sr_email_subscribe: regHash has been deleted too early before saving
 	* fix bug: preview data has not been read in with regHash
